# chagas-ecg-explainability

./: .gitignore  CLAUDE.md  DATA_SETUP.md  LEARNING_PLAN.md  SPEC.md  main.py  pyproject.toml
.claude/skills/: backlog.md  healthcare-ai-session.md
learning/: LEARNING_LOG.md  LEARNING_PLAN.md
notebooks/: data_quality_report.ipynb
notes/: backlog.md
notes/learning/: learning-log.md  learning-plan.md  open-questions.md
reports/: quality_summary.csv
scripts/: download_data.sh  setup_runpod.sh
spec/: data-setup.md  dataset-stats.md  gpu-setup.md  next-session-plan.md
src/: audit_preprocessing.py  dataset.py  dataset_stats.py  explain.py  model.py  plot_preprocess.py  preprocess.py  train.py
