[project]
name = "chagas-ecg-explainability"
version = "0.1.0"
description = "Chagas disease detection from 12-lead ECG with explainability"
requires-python = ">=3.11"
dependencies = [
    # Signal processing
    "wfdb>=4.1",
    "neurokit2>=0.2",
    "scipy>=1.13",
    # Deep learning
    # Intel Mac (x86_64) is stuck at 2.2.2 — torch>=2.3 dropped that platform.
    # On RunPod (Linux + CUDA 12.1): uv pip install torch --index-url https://download.pytorch.org/whl/cu121
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.3; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "pytorch-lightning>=2.3",
    # Explainability
    "captum>=0.7",
    # Experiment tracking
    "wandb>=0.17",
    # Data / evaluation
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    # Visualization
    "matplotlib>=3.9",
    "h5py>=3.16.0",
]

[tool.uv]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
# On RunPod (Linux + CUDA), override torch source:
# uv add torch --index https://download.pytorch.org/whl/cu121
